--- a/README.Rmd
+++ b/README.Rmd
@@ -16,14 +16,14 @@ knitr::opts_chunk$set(
 # epar
 
 <!-- badges: start -->
-Badges:
-```{r coverage_badge, results='asis', echo=TRUE}
+
+```{r coverage_badge, results='asis', echo=FALSE}
 cat(epar::test_and_badge())
 ```
 
 <!-- badges: end -->
 
-The goal of epar is to ...
+The `epar` package is for general use R utility functions for US EPA R Users.  Only a few things here now, but more to come.
 
 ## Installation
 
@@ -34,27 +34,4 @@ You can install the development version of epar from [GitHub](https://github.com
 devtools::install_github("USEPA/epar")
 ```
 
-## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(epar)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
